Return a mutable list rather than immutable for world list, as it's used for sorting